--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.9",
+    "axios": "^1.3.4",
     "clsx": "^1.2.1",
     "eslint-config-next": "^13.2.4",
     "framer-motion": "^10.9.1",
     "next": "^13.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.8",
     "react-icons": "^4.8.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
@@ -30,7 +33,7 @@
     "postcss": "^8.4.21",
     "prettier": "^2.8.7",
     "prettier-plugin-tailwindcss": "^0.2.5",
-    "tailwindcss": "^3.2.7",
+    "tailwindcss": "^3.3.0",
     "typescript": "^5.0.2"
   }
 }
